# awtk-android

./: Android.mk  README.md  create_project.py  utils.py
android-project/: build.gradle  settings.gradle
android-project/app/: build.gradle
android-project/app/jni/: Application.mk
android-project/app/jni/src/: Android.mk
android-project/app/src/androidTest/java/org/zlgopen/awtktemplate/: ExampleInstrumentedTest.java
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/cpp/: CMakeLists.txt
android-project/app/src/main/cpp/app/: README.md  demo_main.c
android-project/app/src/main/cpp/awtk/: README.md
android-project/app/src/main/cpp/awtk/src/blend/: fill_image_bgra8888.c  fill_image_rgba8888.h
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
android-project/app/src/main/java/org/zlgopen/awtktemplate/: MainActivity.java
android-project/app/src/main/java/org/zlgopen/plugins/common/: PluginManager.java
android-project/app/src/main/res/values/: strings.xml
android-project/app/src/test/java/org/zlgopen/awtktemplate/: ExampleUnitTest.java
android-project/gradle/wrapper/: gradle-wrapper.properties
build-scripts/: build.sh  create_proj.py  create_proj.sh  env.sh  test.c
docs/: build_on_windows.md  changes.md  configure_development_environment_on_windows.md  how_to_debug_app_with_android_studio.md  notes.md
scripts/: create_proj.py  env.bat  env.ps1  env.sh  env_mac.sh  env_win.sh  env_win32_bash.sh
